--- a/Winners Circuit/wc/package.json
+++ b/Winners Circuit/wc/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.8.3",
     "passport-google-oauth": "^2.0.0",
     "react": "^17.0.2",
+    "react-apple-login": "^1.1.3",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
