--- a/Winners Circuit/wc/package.json
+++ b/Winners Circuit/wc/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "passport-google-oauth": "^2.0.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-apple-login": "^1.1.3",
     "react-dom": "^17.0.2",
