Registration is now flag based instead of using auth0 redirects

--- a/Winners Circuit/wc/.env
+++ b/Winners Circuit/wc/.env
@@ -1,2 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=winnerscircuit.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=eRrxcj5TClWR5FgzDNjgSq5hhodx2CV0
+WC_PUBLIC_URL=https://www.winnerscircuits.com/
