--- a/Winners Circuit/wc/package.json
+++ b/Winners Circuit/wc/package.json
@@ -2,6 +2,7 @@
   "name": "wc",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://winnerscircuits.com/",
   "dependencies": {
     "@auth0/auth0-react": "^1.5.0",
     "@testing-library/jest-dom": "^5.12.0",
@@ -41,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^8.6.0"
   }
 }
