--- a/Winners Circuit/wc/package.json
+++ b/Winners Circuit/wc/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "passport-google-oauth": "^2.0.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
@@ -23,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build && scp -r ./build/* root@143.244.161.11:/var/www/winnerscircuits.com/html"
   },
   "eslintConfig": {
     "extends": [
