--- a/Winners Circuit/wc/package.json
+++ b/Winners Circuit/wc/package.json
@@ -13,6 +13,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-apple-login": "^1.1.3",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
